add checker support to pom files